--- a/gd.html
+++ b/gd.html
@@ -514,7 +514,7 @@
   <div id="loading" class="screen" hidden="">
     <noscript>Enable JavaScript</noscript>
     
-    <p id="randomMessage" style="color: white; font-size: 30px;">Give credit to rob and go buy his game</p>
+    <p id="randomMessage" style="color: white; font-size: 30px;">You can download all songs from the level select page!</p>
     <h1 class="loading-text" style="font-size: 20px;">v1.3.1C</h1>
     <div class="progress-bar-outer"><div class="progress-bar-inner" id="loading-inner" style="width: 100%;"></div></div>
   </div>
