--- a/browser.html
+++ b/browser.html
@@ -5,21 +5,24 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-    }
-    #browser {
       margin: 0;
       padding: 0;
-      width: 100%;
+      display: flex;
+      flex-direction: column;
       height: 100vh;
     }
     #urlBar {
       display: flex;
-      margin-bottom: 10px;
+      padding: 10px;
+      background-color: #f0f0f0;
+      border-bottom: 1px solid #ccc;
     }
     input[type="text"] {
       flex: 1;
       padding: 10px;
       font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
     button {
       padding: 10px 20px;
@@ -27,15 +30,17 @@
       background-color: #4CAF50;
       color: white;
       border: none;
+      border-radius: 4px;
       cursor: pointer;
+      margin-left: 10px;
     }
     button:hover {
       background-color: #45a049;
     }
     iframe {
-      width: 100%;
-      height: calc(100vh - 50px);
+      flex: 1;
       border: none;
+      width: 100%;
     }
   </style>
 </head>
