--- a/browser.html
+++ b/browser.html
@@ -54,7 +54,7 @@
   <script>
     function navigate() {
       var url = document.getElementById('url').value;
-      if (!url.startsWith('http')) {
+      if (!url.startsWith('http://') && !url.startsWith('https://')) {
         url = 'http://' + url;
       }
       document.getElementById('browser').src = url;
